Bug #56416    errors in first connection for IO thread are not retried

SHOW SLAVE STATUS can not display the number of real retries
for each connection attempt of I/O thread by 'Last_IO_Error'
entry.

To fix the problem to make SHOW SLAVE STATUS to display the
number of retries which would be real retry counts instead of
mi->retry_count(3600*24 by default) for each connection
attempt of I/O thread.